--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-i18next": "^10.12.2",
+    "react-markdown": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "sass-loader": "^7.3.1",
