--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "sass-loader": "^7.3.1",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "windows-build-tools": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
