--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "sass-loader": "^7.3.1",
-    "typescript": "3.5.3",
+    "typescript": "^4.5.4",
     "windows-build-tools": "^5.2.2"
   },
   "scripts": {
