--- a/package.json
+++ b/package.json
@@ -5,26 +5,23 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-router-dom": "^4.3.5",
-    "antd": "^3.22.2",
-    "element-remove": "^1.0.4",
-    "i18next": "^17.0.12",
-    "i18next-browser-languagedetector": "^3.0.3",
-    "i18next-xhr-backend": "^3.1.2",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.14.0",
-    "react-app-polyfill": "^1.0.2",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^10.12.2",
-    "react-markdown": "^4.1.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "sass-loader": "^7.3.1",
-    "typescript": "^4.5.4",
-    "windows-build-tools": "^5.2.2"
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "antd": "4.18.5",
+    "element-remove": "1.0.4",
+    "i18next": "17.0.12",
+    "i18next-browser-languagedetector": "3.0.3",
+    "i18next-xhr-backend": "3.1.2",
+    "moment": "2.29.0",
+    "react": "17.0.2",
+    "react-app-polyfill": "1.0.2",
+    "react-dom": "17.0.2",
+    "react-i18next": "10.12.2",
+    "react-markdown": "^8.0.0",
+    "react-scripts": "5.0.0",
+    "sass": "1.49.0",
+    "sass-loader": "7.3.1",
+    "typescript": "4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +44,5 @@
       "last 1 safari version",
       "last 1 IE version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
