--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/dompurify": "^2.3.3",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
+    "animate.css": "^4.1.1",
     "antd": "4.18.5",
+    "dompurify": "^2.3.4",
     "element-remove": "1.0.4",
     "i18next": "17.0.12",
     "i18next-browser-languagedetector": "3.0.3",
